# multimodal-rag-baseline

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: config.py  thangquang_config.py
data/: final_results.json  generated_qa_pairs.json  generated_qa_pairs_final.json  output.html
data/datahtml/: anhone.html
data/pdf/: train.jsonl
exps/qdrant_client_memory/: meta.json
libs/: common.py
notebooks/: GG_IO_RAG_Vietnamese_Dataset_run_pipeline.ipynb  MultimodalRAG.ipynb  README.md  Rag_using_Huggingface_and_MongoDB.ipynb  demo_colpali_qdrant.py  thangquang_01_image_caption.py  thangquang_01_image_captions.ipynb  thangquang_02_image_extraction.ipynb
notebooks/ContextGem/: contextgem.ipynb
notebooks/CrossPageTablePyMuPDF/: DemoCrosspageTable.ipynb  RAG.ipynb  check_using_api.py  check_using_api_2.py  extract_tables.py  extract_tables_2.py  join_tables copy.ipynb  join_tables_code.ipynb  old_check_using_api.py  old_extract_tables.py  pymupdf_fullpipeline.ipynb  results.ipynb  results.json  results_2.ipynb  table_17.csv  table_18.csv  table_19.csv  table_3.csv
notebooks/Docling/: thangquang_01_image_captions.ipynb  thangquang_02_image_extraction.ipynb
notebooks/HTML_convert/: output.html
notebooks/LLM_parse/: Gemma_prompt_parsing.ipynb  MultimodalRAG.ipynb  Qwen_summary.ipynb  Rag_summary_LLM copy.ipynb  Rag_summary_LLM.ipynb  (+8 more)
scripts/: process_pdfs.py
utils/: check_using_api.py  convert_pdf2img.py  extract_table_img.py  extract_tables.py  image_caption.py  load_prj_config.py  mongodb_connection.py  pdfs.py  rag_utils.py
(+55 files in other folders)
